# stellar-insights

./: CODEBASE_ANALYSIS.md  tailwind.config.ts
backend/: .env.example  Cargo.toml
backend/src/: analytics.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs
backend/src/api/: mod.rs
backend/src/services/: mod.rs  realtime_broadcaster.rs  verification_rewards.rs
contracts/analytics/src/: lib.rs  tests.rs
frontend/: package.json
frontend/src/app/[locale]/dashboard/: page.tsx
frontend/src/app/[locale]/quests/: page.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/lib/: logger.ts
k8s/overlays/mainnet/: kustomization.yaml
mobile/src/: App.tsx
src/: App.tsx  index.css
src/components/dashboard/: CorridorHeatmap.tsx  KPICard.tsx  PaymentsChart.tsx  TopAssetsTable.tsx
src/components/layout/: Header.tsx
src/components/ui/: button.tsx
src/data/: mockData.ts
src/pages/: Anchors.tsx  Corridors.tsx  Dashboard.tsx  Landing.tsx
